# async_sqs_consumer

./: README.md  pyproject.toml
.github/workflows/: publish.yml
async_sqs_consumer/: queue.py  resources.py  types.py  utils.py  worker.py
async_sqs_consumer/utils/: __init__.py  retry.py
