[tool.poetry]
name = "async_sqs_consumer"
version = "0.1.0"
description = ""
authors = ["Diego Restrepo <drestrepo@fluidattacks.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
prospector = "^1.7.7"
black = "^22.8.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
